--- a/src/NavSelect.css
+++ b/src/NavSelect.css
@@ -4,6 +4,11 @@
     top: -60px;
     width: 200px;
     height: 500px;
+    transition: top 0.3s ease;
+}
+
+.nav-select:hover{
+    top: -80px;
 }
 
 .sphere{
@@ -39,4 +44,17 @@
     height: 100px;
     top: 50%;
     transform: translateY(35%);
+}
+
+
+.nav-title{
+    font-weight: 300;
+    color: white;
+    position: absolute;
+    top: 200px;
+    z-index: 4;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 30px;
+    
 }
