--- a/src/WelcomePage.css
+++ b/src/WelcomePage.css
@@ -35,3 +35,39 @@
     position: relative;
     color: black;
 }
+
+.welcome-page{
+    position: relative;
+}
+
+/* App.css */
+.hide-scrollbars {
+    overflow: hidden;  
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE 10+ */
+}
+
+.hide-scrollbars::-webkit-scrollbar {
+    display: none; /* Webkit browsers */
+}
+
+
+.main-sphere{
+    border-radius: 100%;
+    background-color: white;
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    left: 610px;
+    top: 188px;
+    z-index: 8;
+    transition: all 0.7s ease;
+}
+
+.main-sphere.clicked{
+    width: 100%;
+    height: 100%;
+    border-radius: 0%;
+    left: 0px;
+    top: 0px;
+}
