--- a/src/landingPage/NavSelect.css
+++ b/src/landingPage/NavSelect.css
@@ -1,38 +1,38 @@
 .nav-select{
     display: inline-block;
     position: relative;
-    top: -60px;
-    width: 200px;
-    height: 500px;
+    top: -4.688vw;
+    width: 15.625vw;
+    height: 39.063vh;
     transition: top 0.3s ease;
 }
 
 .nav-select:hover{
-    top: -80px;
+    top: -6.25vw;
 }
 
 .sphere{
     border-radius: 100%;
-    width: 200px;
-    height: 200px;
+    width: 15.625vw;
+    height: 15.625vw;
     position: absolute;
     z-index: 2;
     transition: all 0.3s ease;
 }
 
 .rectangle{
-    width: 200px;
-    height: 400px;
+    width: 15.625vw;
+    height: 31.25vw;
     position: absolute;
     z-index: 1;
-    top: 100px;
+    top: 7.813vw;
 }
 
 
 .small-sphere{
     border-radius: 100%;
-    width: 125px;
-    height: 125px;
+    width: 9.766vw;
+    height: 9.766vw;
     position: absolute;
     z-index: 1;
     background-color: aliceblue;
@@ -42,8 +42,8 @@
 }
 
 .nav-icon{
-    width: 100px;
-    height: 100px;
+    width: 7.813vw;
+    height: 7.813vw;
     top: 50%;
     transform: translateY(35%);
 }
@@ -53,11 +53,11 @@
     font-weight: 300;
     color: white;
     position: absolute;
-    top: 220px;
+    top: 17.188vw;
     z-index: 4;
     left: 50%;
     transform: translateX(-50%);
-    font-size: 30px;
+    font-size: 2.344vw;
     
 }
 
