--- a/src/landingPage/WelcomePage.css
+++ b/src/landingPage/WelcomePage.css
@@ -2,7 +2,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    top: 80px;
+    top: 6.25vw;
     align-items: center;
     width: 99.7vw;
     height: 79.6vh;
@@ -17,7 +17,7 @@
 
 .nav-selectors{
     position: absolute;
-    top: 210px;
+    top: 16.406vw;
     left: 50%;
     transform: translateX(-50%);
     width: inherit;
@@ -31,7 +31,7 @@
 
 .subTitle{
     font-weight: 350;
-    top:65px;
+    top:5.078vw;
     position: relative;
     color: black;
 }
@@ -55,11 +55,11 @@
 .main-sphere{
     border-radius: 100%;
     background-color: white;
-    width: 50px;
-    height: 50px;
+    width: 3.906vw;
+    height: 3.906vw;
     position: fixed;
-    left: 610px;
-    top: 188px;
+    left: 47.656vw;
+    top: 14.688vw;
     z-index: 8;
     transition: all 0.7s ease;
 }
