--- a/src/TitleEffect.css
+++ b/src/TitleEffect.css
@@ -1,16 +1,11 @@
-.containerTitles{
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    top: 140px;
-    align-items: center;
-    width: 100%;
-}
-
 .backTitle{
     display: inline-block;
     position: relative;
     z-index: 1;
+    width: 85.469vw;
+    height: 15.625vw;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .centreImage{
@@ -18,20 +13,37 @@
     z-index: 2;
     width: 600px;
     height: 600px;
-    top: -175px;
-    right: 100px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .frontTitle{
     position: absolute;
     z-index: 3;
+    width: 85.469vw;
+    height: 15.625vw;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
-.tempDiv{
-    position: absolute;
+.starter{
+    position: relative;
+    display: flex;
+    top: 8.25vw;
+    align-items: center;
     width: 100%;
-    z-index: 4;
-    height: 100px;
-    background-color: #FA9595;
-    top: 350px;
+    overflow: visible;
+    height: fit-content;
+  }
+
+.underline-title{
+    width: 70.469vw;
+    height: 3vh;
+    border: 4px solid #ffffff;
+    background-color: transparent;
+    position: absolute;
+    top: 17.5vw;
+    z-index: 1;
+    left: 50%;
+    transform: translateX(-50%);
 }
