--- a/src/TitleEffect.css
+++ b/src/TitleEffect.css
@@ -11,10 +11,8 @@
 .centreImage{
     position: absolute;
     z-index: 2;
-    width: 600px;
-    height: 600px;
-    left: 50%;
-    transform: translateX(-50%);
+    width: 46.875vw;
+    height: 46.875vw;
 }
 
 .frontTitle{
@@ -39,7 +37,7 @@
 .underline-title{
     width: 70.469vw;
     height: 3vh;
-    border: 4px solid #ffffff;
+    border: 0.313vw solid #ffffff;
     background-color: transparent;
     position: absolute;
     top: 17.5vw;
