--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
 body {
   margin: 0;
   background-color: #cac4f2;
+  width: 100%;
+  height: 100%;
 }
 
 #root{
-  width: 100%;
+  width: inherit;
   position: absolute;
   text-align: center;
-  height: 100%;
+  height: inherit;
 }
 
 *{
