--- a/src/mobileWelcome/mobileWelcome.css
+++ b/src/mobileWelcome/mobileWelcome.css
@@ -51,3 +51,22 @@
     width: 60vw;
     height: 70vh;
 }
+
+.mobile-explore{
+    width: 30vw;
+    height: 4vh;
+    background-color: white;
+    color: #1B998B;
+    position: absolute;
+    bottom: 6vh;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 6;
+    font-size: 6vw;
+    padding: 3vw;
+    font-weight: 350;
+}
+
+.mobile-explore#p{
+    vertical-align: middle;
+}
