--- a/src/mobileMenu/mobileMenu.css
+++ b/src/mobileMenu/mobileMenu.css
@@ -1,11 +1,17 @@
 .mobile-menu{
     width: 100%;
     height: 100%;
-    background-color: black;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 10;
+}
+
+.mobile-menu-transition{
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+
 }
 
 .mobile-menu-section{
