--- a/src/TitleEffect.css
+++ b/src/TitleEffect.css
@@ -40,9 +40,9 @@
     width: 70.469vw;
     height: 3vh;
     border: 0.313vw solid #ffffff;
-    background-color: transparent;
+    background-color: white;
     position: absolute;
-    top: 17.5vw;
+    top: 19vw;
     z-index: 1;
     left: 50%;
     transform: translateX(-50%);
@@ -59,7 +59,8 @@
 
 .transition-cover{
     width: 100%;
-    height: 500px;
+    min-height: 100vh;
     position: relative;
-    overflow: hidden;
+    overflow: visible;
+    display: block;
 }
