sharpened the edges of the footer icons on figma + adjusted for responsiveness in title component + resume shadows aligned

--- a/src/TitleEffect.css
+++ b/src/TitleEffect.css
@@ -64,3 +64,9 @@
     overflow: visible;
     display: block;
 }
+
+@media (max-width: 800px) {
+    .transition-cover{
+        min-height: 30vh;
+    }
+}
