--- a/src/footer/Footer.css
+++ b/src/footer/Footer.css
@@ -1,14 +1,26 @@
 .footer{
     width: 100%;
-    height: 20vh;
     display: block;
     position: relative;
-    bottom: 0;
+    bottom: -1vh;
     margin-top: 10vh;
-    padding-top: 2vh;
+    padding: 1vh 0vh;
 }
 
 .footericons{
-    margin: 1vh;
+    position: relative;
+    margin: 1vw;
+    width: 6vw;
+    height: 6vw;
+    vertical-align: bottom;
+    padding: 0.5vw;
 }
 
+@media (max-width: 800px) {
+    .footer{
+        padding: 2.5vh 0vh;
+    }
+    .footericons{
+        margin: 1.5vw;
+    }
+}
