root min height css

--- a/src/resumePage/Resume.css
+++ b/src/resumePage/Resume.css
@@ -7,7 +7,7 @@
 
 .downloadtext{
     display: inline;
-    font-size: 5vw;
+    font-size: 4vw;
     font-weight: 300;
 }
 
@@ -49,5 +49,8 @@
 .pageone{
     margin-top: 3vh;
 }
-
+.download-icon{
+    width: 4vw;
+    height: 4vw;
+}
 }
