--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,18 @@ body {
   margin: 0;
   background-color: #cac4f2;
   width: 100%;
-  min-height: 100%;
+  height: 100vh;
+}
+
+@media (min-width: 900px) {
+  body{
+    height: 100%;
+  }
 }
 
 #root{
   width: inherit;
-  position: absolute;
+  /* position: absolute; */
   text-align: center;
   height: inherit;
 }
