--- a/src/weirdPage/Weird.css
+++ b/src/weirdPage/Weird.css
@@ -1,3 +1,41 @@
 .Weird-Page{
-    height: 100%;
+    min-height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+
+.weird-image{
+    width: 70vw;
+}
+
+.weird-desc{
+    width: 60%;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 2vw;
+}
+
+.weird-item{
+    width: 80%;
+    color: white;
+    font-weight: 300;
+    margin-bottom: 5vw;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 2.75vw;
+}
+
+@media (max-width: 800px) {
+    .weird-item{
+        font-size: 7vw;
+        margin-bottom: 2.5vw;
+
+    }
+    .weird-desc{
+        width: 80%;
+        margin: 1vw;
+
+    }    
 }
