--- a/src/projectPage/Project.css
+++ b/src/projectPage/Project.css
@@ -37,6 +37,11 @@
 
 }
 
+.project-link{
+    text-decoration: underline;
+    text-decoration-color: white;
+    color: white; /* Optionally, you can control the underline color */
+}
 .project-divider{
     height: 0.25vh;
     width: 80%;
@@ -93,3 +98,4 @@
         transform: translateX(-100%);
     }
 }
+
