--- a/src/blogPage/Blog.css
+++ b/src/blogPage/Blog.css
@@ -6,18 +6,22 @@
 
 .blog-item{
     text-align: left;
-    color: white;
     width: 80%;
     position: relative;
     left: 50%;
     transform: translateX(-50%);
-    opacity: 0.6;
+    opacity: 0.4;
 }
 
 .blog-item:hover{
     opacity: 1;
 
 }
+
+a{
+    color: rgb(198, 21, 9);
+}
+
 .blog-title{
     font-size: 3.75vw;
     margin-bottom: 1vw;
